# cpp-project-with-gtest-template

./: CMakeLists.txt  README.md  build.sh
src/: func.h
test/: CMakeLists.txt  test.cpp
